libxshmfence (1.1-1) UNRELEASED; urgency=low

  [ Maarten Lankhorst ]
  * New upstream release.
  * Add symbols file.
  * libxshmfence is now built for any arch.
  * Add missing build-deps.

  [ Julien Cristau ]
  * Allow parallel builds.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Mon, 02 Dec 2013 11:07:04 +0100

libxshmfence (1.0-1) unstable; urgency=low

  * Initial release.

 -- Julien Cristau <jcristau@debian.org>  Sun, 24 Nov 2013 15:20:54 +0100